<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:checked="true" />

    <CheckBox
        android:id="@+id/monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:checked="true" />

    <CheckBox
        android:id="@+id/tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:checked="true" />

    <CheckBox
        android:id="@+id/wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:checked="true" />

    <CheckBox
        android:id="@+id/thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:checked="true" />

    <CheckBox
        android:id="@+id/friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:checked="true" />

    <CheckBox
        android:id="@+id/saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:checked="true" />

    <Button
        android:id="@+id/selectDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ok"
        android:onClick="selectDays"/>

</LinearLayout>